# hardware-proprioception

./: .gitignore  README.md  eval_accuracy.py  plot_accuracy_results.py  pyproject.toml  requirements.txt  rescore_with_math_verify.py  setup_venv.sh  smoke_test_kvpress.py
eval_outputs_math/: budget_sweep_results.csv  naive_strategy_results.csv
results/: latency_context_sweep.jsonl  latency_simulation.csv  latency_simulation.jsonl
results/benchmark/: benchmark_results.csv  benchmark_results.jsonl  context_sweep_GH200.csv  context_sweep_GH200.jsonl  context_sweep_H100_SXM.csv  context_sweep_H100_SXM.jsonl  strategy_sweep_GH200.csv  strategy_sweep_GH200.jsonl
results/benchmark_64steps/: context_sweep_GH200.csv  context_sweep_GH200.jsonl
results/benchmark_A100_40GB/: context_sweep_A100_40GB.csv  strategy_sweep_A100_40GB.csv
results/benchmark_H200/: context_sweep_H200.csv
scripts/: benchmark_context_sweep.py  benchmark_full_sweep.py  benchmark_latency.py  benchmark_strategy_sweep.py  eval_naive_strategies.py  fit_v3_sdpa.py  ncu_profile_decode.py  parse_ncu_results.py  plot_analysis.py  plot_simulation_vs_benchmark.py  plot_slides_figures.py  precheck.sh  run_all_models.sh  run_latency_simulation.py  run_ncu_sweep.sh  simulate_latency.py  stress_test.sh  validate_cross_model.py  validate_grid.py  validate_hybrid.py
slides/: lab_meeting_april2026.md  slide_deck_content.md
src/hwprop/: __init__.py  oracle.py  (+12 more)
tests/: conftest.py  test_accuracy_eval.py  test_cost_model.py  test_eval_pipeline.py  test_oracle.py  test_sampling.py  test_simulator.py  test_specs.py
(+121 files in other folders)
