[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwprop"
version = "0.1.0"
description = "Analytical roofline-based cost model for LLM decode steps on diverse hardware"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
eval = [
    "matplotlib",
    "datasets",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hwprop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
